--- a/front/src/app/clientes/clientes.component.html
+++ b/front/src/app/clientes/clientes.component.html
@@ -2,6 +2,8 @@
 <div class="card border-primary mb-3" *ngIf="habilitar == true">
     <div class="card-body text-primary">
       <h5  class="card-title">Listado de clientes</h5>
+      <div class="my-2 text-left">
+            <button class="btn btn-rounded btn primary" type="button"[routerLink]="['/clientes/forms']">Crear Cliente</button></div>
         <table class="table table-bordered table-striped">
             <thead>
             <tr>
