--- a/front/src/app/clientes/form.component.html
+++ b/front/src/app/clientes/form.component.html
@@ -5,16 +5,16 @@
 
     <form (ngSubmit)="create()">
       <div class="form-group row">
-        <label for="name" class="col-form-label col-sm-2">Name</label>
+        <label for="name" class="col-form-label col-sm-2">nombre</label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" [(ngModel)]="cliente.nombre" name="name">
+          <input type="text" class="form-control" [(ngModel)]="cliente.name" name="name">
         </div>
       </div>
 
       <div class="form-group row">
-        <label for="surname" class="col-form-label col-sm-2">surname</label>
+        <label for="surname" class="col-form-label col-sm-2">apellido</label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" [(ngModel)]="cliente.apellido" name="surname">
+          <input type="text" class="form-control" [(ngModel)]="cliente.surname" name="surname">
         </div>
       </div>
 
@@ -27,7 +27,7 @@
 
       <div class="form-group row">
         <div class="col-sm-6">
-          <button class="btn btn-primary" role="button" >crear</button>
+          <button class="btn btn-primary" role="button">crear</button>
         </div>
 
       </div>
