--- a/front/src/app/clientes/form.component.html
+++ b/front/src/app/clientes/form.component.html
@@ -1,38 +1,33 @@
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-white" style="padding: 9px;">
   <div class="card-header">{{titulo}}</div>
-  <div class="card-body">
-
-
-    <form (ngSubmit)="create()">
+  <div class="card-body" >
+    <form (ngSubmit)="create()" class="form-horizontal">
       <div class="form-group row">
-        <label for="name" class="col-form-label col-sm-2">nombre</label>
-        <div class="col-sm-6">
+        <label for="name" class="col-form-label col-sm-2">Nombre</label>
+        <div class="col-sm-10">
           <input type="text" class="form-control" [(ngModel)]="cliente.name" name="name">
         </div>
       </div>
 
-      <div class="form-group row">
-        <label for="surname" class="col-form-label col-sm-2">apellido</label>
-        <div class="col-sm-6">
+      <div class="form-group row" >
+        <label for="surname" class="col-form-label col-sm-2">Apellido</label>
+        <div class="col-sm-10">
           <input type="text" class="form-control" [(ngModel)]="cliente.surname" name="surname">
         </div>
       </div>
 
       <div class="form-group row">
         <label for="email" class="col-form-label col-sm-2">Email</label>
-        <div class="col-sm-6">
+        <div class="col-sm-10">
           <input type="text" class="form-control" [(ngModel)]="cliente.email" name="email">
         </div>
       </div>
 
       <div class="form-group row">
-        <div class="col-sm-6">
-          <button class="btn btn-primary" role="button">crear</button>
+        <div class="col-sm-10 offset-sm-2">
+          <button class="btn btn-primary" role="button">Crear</button>
         </div>
-
       </div>
     </form>
-
   </div>
-
 </div>
